# tp_vdgo

./: .env.example  .gitignore  README.md  proba.py  pyproject.toml  requirements.txt
src/tp_vdgo/: cli.py  config.py  yoyo.ini
src/tp_vdgo/auth/: __init__.py  auth.py
src/tp_vdgo/core/: __init__.py
src/tp_vdgo/core/auth/: auth.py  create.py  drop.py
src/tp_vdgo/core/db/: createuser.py  db.py  dropdb.py  dropusers.py
src/tp_vdgo/core/kladr/: __init__.py  create.py  drop.py  kladr.py  load.py  truncate.py
src/tp_vdgo/db/: __init__.py  createdb.py  db.py
src/tp_vdgo/gui/: app.py  main.py
src/tp_vdgo/gui/views/: dialog_window.ui  dialog_window_ui.py  main_window.ui  main_window_ui.py  radio_window.ui  radio_window_ui.py
src/tp_vdgo/gui/widgets/: main_window.py
src/tp_vdgo/migrations/: 20260406_01_LAooh-inital-schema-kladr.rollback.sql  20260406_01_LAooh-inital-schema-kladr.sql  20260409_01_eEuL9-auth-role-profile.rollback.sql  20260409_01_eEuL9-auth-role-profile.sql
src/tp_vdgo/models/: __init__.py
src/tp_vdgo/models/auth/: role.py  user.py
src/tp_vdgo/models/kladr/: __init__.py  altnames.py  doma.py  flat.py  kladr.py  namemap.py  socrbase.py  street.py
src/tp_vdgo/utils/: __init__.py  connect.py
tests/: conftest.py  test_auth_models.py  test_cli.py  test_db_operations.py  test_kladr_models.py
