[project]
name="tp_vdgo"
version="0.1.0"
description="ТП ВДГО"
requires-python=">=3.11"

dependencies=[
    "typer[all]",
    "pydantic-settings",
    "psycopg[binary]",
    "asyncpg",
    "dbfread2",
    "pyside6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
]

[project.scripts]
tp_vdgo="tp_vdgo.cli:app"

[tool.pytest.ini_options]
pythonpath=["src"]
testpaths=["tests"]
asyncio_mode="auto"